deployment/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment-ingress
  namespace: oficinapro-dev
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /pagamento
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              number: 8080
